// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> renders with title 1`] = `
<div
  className="Component-root-4"
>
  <h2
    className="MuiTypography-root-7 MuiTypography-title-13 Component-title-6"
  >
    Lorem ipsum
  </h2>
  <div
    className="Component-action-1"
  />
</div>
`;

exports[`<PageHeader /> renders with title and back button 1`] = `
<div
  className="Component-root-4"
>
  <button
    className="MuiButtonBase-root-38 MuiIconButton-root-32 MuiIconButton-colorInherit-33 Component-menuButton-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiIconButton-label-37"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-41"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </g>
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-47"
    />
  </button>
  <h2
    className="MuiTypography-root-7 MuiTypography-title-13 Component-title-6"
  >
    Lorem ipsum
  </h2>
  <div
    className="Component-action-1"
  />
</div>
`;

exports[`<PageHeader /> renders with title icon bar 1`] = `
<div
  className="Component-root-4"
>
  <h2
    className="MuiTypography-root-7 MuiTypography-title-13 Component-title-6"
  >
    Lorem ipsum
  </h2>
  <div
    className="Component-action-1"
  >
    <button
      className="MuiButtonBase-root-38 MuiIconButton-root-32"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-37"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-41"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-47"
      />
    </button>
  </div>
</div>
`;

exports[`<PageHeader /> renders with title, back button and icon bar 1`] = `
<div
  className="Component-root-4"
>
  <button
    className="MuiButtonBase-root-38 MuiIconButton-root-32 MuiIconButton-colorInherit-33 Component-menuButton-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiIconButton-label-37"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-41"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </g>
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-47"
    />
  </button>
  <h2
    className="MuiTypography-root-7 MuiTypography-title-13 Component-title-6"
  >
    Lorem ipsum
  </h2>
  <div
    className="Component-action-1"
  >
    <button
      className="MuiButtonBase-root-38 MuiIconButton-root-32"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-37"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-41"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-47"
      />
    </button>
  </div>
</div>
`;

exports[`<PageHeader /> renders without title 1`] = `
<div
  className="Component-root-4"
>
  <h2
    className="MuiTypography-root-7 MuiTypography-title-13 Component-title-6"
  >
    <span
      className="Component-skeleton-31"
      style={
        Object {
          "width": "10em",
        }
      }
    >
      ‌
    </span>
  </h2>
  <div
    className="Component-action-1"
  />
</div>
`;
